# huangjj27.github.io

./: .gitignore  .gitlab-ci.yml  404.html  book.toml  index.html  infi_search.json  interview.html  load-wasm-mistake.html  print.html  reservoir.html  resume.html  rust-ffi.html  rust-mirror.html  rust-safe-apps-51.html  rust-tianhe-ii.html  searchindex.js  searchindex.json  snake-with-bevy.html  tauri-single-instance-bug-dangling.html
.cargo/: config.toml
.github/: rust.yml
.github/workflows/: build.yml  editing.yml  mdbook-pages.yml  publish.yml
code/: cargo.config  reservoir.rs
code/c_call_rust/: Cargo.toml  makefile
code/c_call_rust/c_src/: main.c
code/c_call_rust/src/: callrust.h  lib.rs
code/ffi_call_cpp/: Cargo.toml  build.rs
code/guess/: Cargo.toml  main.rs
code/guess_wasi/: Cargo.toml  main.rs
code/interview/: binary-search.rs  mirroring-tree.rs
css/: general.css
number_theory/: goldbachs-conjecture.html  if_2n-p_is_divided_by_p.html  intro.html  single-composite-divsion.html
rust-patterns/: abstract-factory.html  builder.html  intro.html
src/: SUMMARY.md  about_me.md  crates-index-on-gitlab.md  goldbachs-conjecture.md  interview.md  load-wasm-mistake.md  reservoir.md  resume.md  rust-ffi.md  rust-mirror.md  rust-safe-apps-51.md  rust-tianhe-ii.md  rust-tianhe2.md  snake-with-bevy.md  tauri-single-instance-bug-dangling.md  web-testing-with-rust.md
src/number_theory/: goldbachs-conjecture.md  if_2n-p_is_divided_by_p.md  intro.md  (+1 more)
src/wasi/: 1.md  2.md  (+3 more)
theme/: index.hbs
wasi/: intro.html  wasi_and_wasmtime.html  wasi_guess.html
(+8 files in other folders)
